--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -1,6 +1,10 @@
 <div class="search-bar form-inline">
-  <input class="form-control" type="text" />
-  <button class="btn">
+  <input 
+  	ng-model="$ctrl.input"
+  class="form-control" type="text" />
+  <button 
+  	ng-click="$ctrl.search()"
+  class="btn">
     <span class="glyphicon glyphicon-search"></span>
   </button>
 </div>
